@@ -1,6 +1,7 @@
 libmpdclient 2.20 (not yet released)
 * support MPD protocol 0.23
   - getvol
+  - position argument for searchadd and findadd
 * support MPD protocol 0.22.4
   - binarylimit
 * support MPD protocol 0.22.0
